movie and tv detail page

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -8,3 +8,7 @@
     backdrop-filter: blur(8.7px);
     -webkit-backdrop-filter: blur(8.7px);
   }
+  .active{
+    color: black;
+    background-color: white;
+  }
