--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,19 +7,46 @@
             now.</p>
     </div>
 </section>
-<section *ngIf="movieData.length>0" class="">
+<section *ngIf="!trendingBool" >
     <div class="md:w-9/12 w-11/12 mx-auto">
-        <div>
-            <p class="text-white font-semibold text-3xl mb-5">Trending</p>
+        <div class="flex justify-between items-center mb-5">
+            <p class="text-white font-semibold md:text-3xl text-lg">Trending</p>
+            <div class="bg-transparent text-sm border-1 border-gray-200 rounded-xl inline-flex">
+                <button
+                    class="inline-flex font-semibold px-5 py-2 text-white items-center transition-colors duration-300 ease-in"
+                    [class.active]="activeButton === 'day'" (click)="getTrending('day')">
+                    <span>Day</span>
+                </button>
+                <button
+                    class="inline-flex px-5 font-semibold text-white py-2 items-center transition-colors duration-300 ease-in"
+                    [class.active]="activeButton === 'week'" (click)="getTrending('week')">
+                    <span>Week</span>
+                </button>
+            </div>
         </div>
         <owl-carousel-o [options]="customOptions">
+
             <ng-template *ngFor="let movies of movieData" carouselSlide>
-                <div class="mx-4">
+                <div [routerLink]="['/movie', movies.id]"  class="mx-4">
+
                     <div>
+
                         <img class="rounded-md md:h-96 h-52 w-auto drop-shadow-md object-cover"
                             src="https://image.tmdb.org/t/p/original{{movies.poster_path}}" />
                     </div>
-                    <p class="text-white text-xl font-bold mt-2 truncate">{{movies.original_title }}</p>
+
+                    <svg class="absolute top-0" width="100" height="100" viewBox="-15 -15 150 150" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+                        <circle r="50" cx="60" cy="60" fill="#04152D" stroke="#04152D" stroke-width="9"
+                            stroke-dasharray="314px" stroke-dashoffset="0"></circle>
+                        <circle r="50" cx="60" cy="60" stroke="#01931e" stroke-width="10" stroke-linecap="butt"
+                            [attr.stroke-dashoffset]=movies.calculatedValue fill="#04152D" stroke-dasharray="314px">
+                        </circle>
+                        <text x="37px" y="67px" fill="#ffffff" font-size="30px" font-weight="bold"
+                            style="transform:rotate(90deg) translate(0px, -116px)">{{movies.roundedValue}}</text>
+                    </svg>
+
+                    <p class="text-white text-xl font-bold mt-3 truncate">{{movies.original_title }}</p>
                     <p class="text-white text-base font-medium">{{movies.release_date | dateFormat}}</p>
                 </div>
 
@@ -30,20 +57,43 @@
 
 
 
-<section *ngIf="popularData.length>0" class="mt-24">
+<section *ngIf="!popularboolean" class="mt-24">
     <div class="md:w-9/12 w-11/12 mx-auto">
-        <div>
-            <p class="text-white font-semibold text-3xl mb-5">What's Popular</p>
+        <div class="flex justify-between mb-5 items-center">
+            <p class="text-white font-semibold text-lg md:text-3xl">What's Popular</p>
+            <div class="bg-transparent text-sm border-1 border-gray-200 rounded-xl inline-flex">
+                <button
+                    class="inline-flex font-semibold px-5 py-2 text-white items-center transition-colors duration-300 ease-in"
+                    [class.active]="activePopular === 'movie'" (click)="getPopular('movie')">
+                    <span>Movie</span>
+                </button>
+                <button
+                    class="inline-flex px-5 font-semibold text-white py-2 items-center transition-colors duration-300 ease-in"
+                    [class.active]="activePopular === 'tv'" (click)="getPopular('tv')">
+                    <span>TV Shows</span>
+                </button>
+            </div>
         </div>
         <owl-carousel-o [options]="customOptions">
             <ng-template *ngFor="let popular of popularData" carouselSlide>
-                <div class="mx-4">
+                <div [routerLink]="[getCategoryRoute(activePopular), popular.id]" class="mx-4">
                     <div>
                         <img class="rounded-md md:h-96 h-52 w-auto drop-shadow-md object-cover"
                             src="https://image.tmdb.org/t/p/original{{popular.poster_path}}" />
 
                     </div>
-                    <p class="text-white text-xl font-bold mt-2 truncate">{{popular.original_name || popular.original_title }}</p>
+                    <svg class="absolute top-0" width="100" height="100" viewBox="-15 -15 150 150" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+                        <circle r="50" cx="60" cy="60" fill="#04152D" stroke="#04152D" stroke-width="9"
+                            stroke-dasharray="314px" stroke-dashoffset="0"></circle>
+                        <circle r="50" cx="60" cy="60" stroke="#01931e" stroke-width="10" stroke-linecap="butt"
+                            [attr.stroke-dashoffset]=popular.calculatedValue fill="#04152D" stroke-dasharray="314px">
+                        </circle>
+                        <text x="37px" y="67px" fill="#ffffff" font-size="30px" font-weight="bold"
+                            style="transform:rotate(90deg) translate(0px, -116px)">{{popular.roundedValue}}</text>
+                    </svg>
+                    <p class="text-white text-xl font-bold mt-2 truncate">{{popular.original_name ||
+                        popular.original_title }}</p>
                     <p class="text-white text-base font-medium">{{popular.first_air_date || popular.release_date
                         | dateFormat}}</p>
                 </div>
@@ -54,21 +104,45 @@
 </section>
 
 
-<section *ngIf="popularData.length>0" class="mt-24">
+<section *ngIf="!ratedBoolean" class="mt-24">
     <div class="md:w-9/12 w-11/12 mx-auto">
-        <div>
-            <p class="text-white font-semibold text-3xl mb-5">Top Rated</p>
+        <div class="flex justify-between mb-5 items-center">
+            <p class="text-white font-semibold md:text-3xl text-lg">Top Rated</p>
+            <div class="bg-transparent text-sm border-1 border-gray-200 rounded-xl inline-flex">
+                <button
+                    class="inline-flex font-semibold px-5 py-2 text-white items-center transition-colors duration-300 ease-in"
+                    [class.active]="activeRated === 'movie'" (click)="getTopRated('movie')">
+                    <span>Movie</span>
+                </button>
+                <button
+                    class="inline-flex px-5 font-semibold text-white py-2 items-center transition-colors duration-300 ease-in"
+                    [class.active]="activeRated === 'tv'" (click)="getTopRated('tv')">
+                    <span>TV Shows</span>
+                </button>
+            </div>
         </div>
         <owl-carousel-o [options]="customOptions">
             <ng-template *ngFor="let toprated of topratedData" carouselSlide>
-                <div class="mx-4">
+                <div [routerLink]="[getCategoryRoute(activeRated), toprated.id]" class="mx-4">
                     <div>
                         <img class="rounded-md md:h-96 h-52 w-auto drop-shadow-md object-cover"
                             src="https://image.tmdb.org/t/p/original{{toprated.poster_path}}" />
 
                     </div>
-                    <p class="text-white text-xl font-bold mt-2 truncate">{{toprated.original_name || toprated.original_title }}</p>
-                    <p class="text-white text-base font-medium">{{toprated.first_air_date || toprated.release_date | dateFormat}}</p>
+                    <svg class="absolute top-0" width="100" height="100" viewBox="-15 -15 150 150" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+                        <circle r="50" cx="60" cy="60" fill="#04152D" stroke="#04152D" stroke-width="9"
+                            stroke-dasharray="314px" stroke-dashoffset="0"></circle>
+                        <circle r="50" cx="60" cy="60" stroke="#01931e" stroke-width="10" stroke-linecap="butt"
+                            [attr.stroke-dashoffset]=toprated.calculatedValue fill="#04152D" stroke-dasharray="314px">
+                        </circle>
+                        <text x="37px" y="67px" fill="#ffffff" font-size="30px" font-weight="bold"
+                            style="transform:rotate(90deg) translate(0px, -116px)">{{toprated.roundedValue}}</text>
+                    </svg>
+                    <p class="text-white text-xl font-bold mt-2 truncate">{{toprated.original_name ||
+                        toprated.original_title }}</p>
+                    <p class="text-white text-base font-medium">{{toprated.first_air_date || toprated.release_date |
+                        dateFormat}}</p>
                 </div>
 
             </ng-template>
@@ -77,5 +151,5 @@
 </section>
 
 <div *ngIf="bannerImage.length>0" class="bg-transparent p-4 mt-24 text-center">
-<p class="text-white font-semibold">Made with ❤️ by Ankush</p>
+    <p class="text-white font-semibold">Made with ❤️ by Ankush</p>
 </div>
